static/css/main.css
body {
    margin: 0;
    padding: 0;
    line-height: 1.6;
    font-size: 18px;
    font-family: Georgia, 'Bitstream Charter', serif;
    color: #333;
    background-color: #f8f8f8;
}

h1,
h2,
h3 {
    line-height: 1.2;
}
h1 {
    font-size: 1.7em;
}
h2 {
    font-size: 1.2em;
}

a,
a:visited {
    color: #00529b;
    text-decoration: none;
}
a:hover,
a:active,
a:focus {
    color: #007ed7;
}
.info a,
.info a:visited {
    color: #002241;
    text-decoration: underline;
}
.info a:hover,
.info a:active,
.info a:focus {
    color: #000407;
    text-decoration: none;
}
main a:not(.no-link-decoration)[href^="https://"]:not([href^="https://benjamin-altpeter.de"]):not([href^="https://docs.benjamin-altpeter.de"]):not([href^="https://cdn.baltpeter.io"]):not([href^="https://apt.altpeter.me"]):not([href^="http://localhost:"]):after
{
    content: '';
    display: inline-block;
    width: 1em;
    height: 1em;
    background-image: url(/icons/external-blue.svg);
    background-size: 0.8em 0.8em;
    background-position: bottom;
    background-repeat: no-repeat;
    margin-left: 0.2em;
    vertical-align: -0.5px;
}

.container {
    width: 80vw;
    max-width: 750px;
    margin: auto;
}

img {
    max-width: 100%;
}
img.image {
    display: block;
    margin: auto;
}

video {
    max-width: 100%;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}
table thead th,
table tbody td {
    padding: 10px;
}

pre {
    white-space: pre-wrap;
    overflow: auto;
}

header {
    background-color: #00529b;
    color: #ffffff;
    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.3);

    padding: 25px 0;
    margin-bottom: 15px;
}
header .container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}
#logo {
    position: absolute;
    left: 0;
}
#logo a {
    font-size: 1.5em;
    font-weight: bold;
    color: #fff;
    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.15);
}
nav a,
nav a:visited {
    margin-left: 0.75em;
    color: #bde5f8;
}
nav a:hover,
nav a:active,
nav a:focus {
    color: #8eb0c1;
}

footer {
    border-top: 1px solid rgba(186, 186, 186, 0.51);
    padding: 10px 0;
    margin-top: 10px;
    font-size: 0.9em;
}

.main-article h1 {
    margin-bottom: 0;
}
.main-article-meta,
.list-article-meta,
.list-project-meta {
    font-size: 0.8em;
}

figcaption {
    font-size: 0.8em;
}
figure > * {
    display: block;
    margin: auto;
    text-align: center;
}

/* Home */

#home-hero-main {
    display: grid;
    grid-template-columns: 25% 75%;
    grid-gap: 20px;
    align-items: center;

    padding: 20px;
}
#home-hero-photo {
    line-height: 1;
}
#home-hero-photo img {
    border-radius: 50%;
}
#home-hero-name h1 {
    font-size: 3.5em;
    font-weight: normal;
    line-height: 1;
    padding-bottom: 15px;
    margin: 0;
}
#home-hero-bio {
    margin-left: 5px;
    text-align: justify;
    hyphens: auto;
}

#home-hero-contact {
    display: grid;
    grid-template-columns: 0.95fr 0.95fr 1.1fr;

    padding: 0 20px;
}
.contact-block {
    display: grid;
    grid-template-columns: 16px auto;
    grid-gap: 10px;
}
.contact-block p {
    margin-top: 0;
    margin-bottom: 5px;
}

/* List */

article.list-article,
article.list-project {
    border: 1px solid rgba(170, 170, 170, 0.51);
    border-radius: 5px;
    margin-bottom: 15px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    overflow: hidden;
}
article.list-article .padded,
article.list-project .padded {
    padding: 0 20px 10px 20px;
}
article.list-article h2,
article.list-project h2 {
    margin-bottom: 0;
}
article.list-article .description,
article.list-project .description {
    margin-top: 5px;
    margin-bottom: 0;
}

.list-project-footer {
    margin-top: 10px;
    padding-top: 10px;
    background-color: rgba(170, 170, 170, 0.21);
}

/* Syntax highlighting */
code {
    color: #f8f8f2;
    background-color: #272822;
    padding: 3px;
    font-size: 0.9em;
    border-radius: 2px;
}
pre code {
    padding: 0; /* Don't indent the first line of `pre`s (which contain `code`s). */
}

.chroma {
    padding: 10px;
    border-radius: 2px;
}

@media (max-width: 936px) {
    header .container {
        display: block;
        text-align: center;
    }
    #logo {
        position: relative;
    }
    nav a,
    nav a:visited {
        margin: 0;
        padding: 0 0.35em 0 0.35em;
    }

    #home-hero-main {
        display: block;
    }
    #home-hero-photo img {
        display: block;
        margin: auto;
        width: 30vw;
    }
    #home-hero-heading {
        text-align: center;
    }
    #home-hero-name h1 {
        font-size: 3em;
    }
    #home-hero-contact {
        display: block;
    }
    .contact-col {
        margin: auto;
    }
}

/* Alerts/boxes */

.box {
    margin: 1em 0;
    padding: 1em;
    border-radius: 5px;
}
.box p:first-of-type {
    margin-top: 0;
}
.box p:last-of-type {
    margin-bottom: 0;
}
.warning {
    color: #613a00;
    background-color: #fef2c3;
}
.info {
    color: #002e57;
    background-color: #daf1fb;
}
.success {
    color: #2c4d00;
    background-color: #e8f6d0;
}
.error {
    color: #3d0003;
    background-color: #ffc7c7;
}

